Add govuk-lint and run it as part of jenkins.sh
We only run in diff mode though, so that projects that add this after existing for a while don't have to do a massive lint-based changeset to get their first build with this new script to pass.

--- a/templates/jenkins.sh.erb
+++ b/templates/jenkins.sh.erb
@@ -35,6 +35,16 @@ git clean -fdx
 # is master.
 git merge --no-commit origin/master || git merge --abort
 
+# Lint changes introduced in this branch, but not for master
+if [[ ${GIT_BRANCH} != "origin/master" ]]; then
+  bundle exec govuk-lint-ruby \
+    --diff \
+    --cached \
+    --format html --out rubocop-${GIT_COMMIT}.html \
+    --format clang \
+    app spec lib
+fi
+
 export RAILS_ENV=test
 bundle install --path "${HOME}/bundles/${JOB_NAME}" --deployment --without development
 
