--- a/templates/jenkins.sh.erb
+++ b/templates/jenkins.sh.erb
@@ -53,6 +53,7 @@ bundle install --path "${HOME}/bundles/${JOB_NAME}" --deployment --without devel
 # Uncomment if this app uses a database
 # bundle exec rake db:drop db:create db:schema:load
 
+export RCOV=1
 if bundle exec rake ${TEST_TASK:-"default"}; then
   github_status success "succeeded on Jenkins"
 else
